fix register endpoint again