@@ -8,9 +8,14 @@ import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Collection;
 import java.util.List;
 
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+import java.util.Collection;
+import java.util.Collections;
+
 public class MyUserDetails implements UserDetails {
 
-    private final User user;
+    private User user;
 
     public MyUserDetails(User user) {
         this.user = user;
@@ -18,8 +23,8 @@ public class MyUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // You can customize roles/authorities here
-        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
+        // For now, no roles/authorities:
+        return Collections.emptyList();
     }
 
     @Override
